Safari input elements don't respect line-heights smaller than 'normal'. https://bugs.webkit.org/show_bug.cgi?id=167209

Reviewed by Simon Fraser.

Center and clip the inner text renderer when it is not enclosed in a "container content".
Container content is triggered by input types that are slightly more complex than "type: text".

It ensures that placeholder and the actual content are positioned and clipped the same way.
e.g.

  <input type="text" placeholder="centered">
  <input type="text" value="centered">

They should produce the same rendering (provided same color is set).

* LayoutTests/fast/forms/single-text-line-content-clipping-expected.html: Added.
* LayoutTests/fast/forms/single-text-line-content-clipping.html: Added.
* Source/WebCore/rendering/RenderTextControlSingleLine.cpp:
(WebCore::RenderTextControlSingleLine::layout):
(WebCore::RenderTextControlSingleLine::hasControlClip const):
(WebCore::RenderTextControlSingleLine::centerRenderer const): Deleted.
* Source/WebCore/rendering/RenderTextControlSingleLine.h:

Canonical link: https://commits.webkit.org/264802@main